Prevent implicit framebuffer clear from clobbering alpha in emulated RGB

In the case of emulated RGB framebuffers (for alpha:false on Mac, where it is
backed by an RGBA IOSurface), the implicit framebuffer clear (due to
preserveDrawingBuffer:false) could sometimes clobber the alpha channel of the
RGBA IOSurface (which should always be 1.0).

BUG=666259
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel;master.tryserver.chromium.android:android_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2535173002
Cr-Commit-Position: refs/heads/master@{#435850}

Former-commit-id: 4259dbb0600a71bcff06f342294fe1546bec9f08